--- a/syq/syq/MDK-ARM/syq.uvprojx
+++ b/syq/syq/MDK-ARM/syq.uvprojx
@@ -654,6 +654,26 @@
               <FileType>5</FileType>
               <FilePath>.\User\move.h</FilePath>
             </File>
+            <File>
+              <FileName>encoder.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\User\encoder.c</FilePath>
+            </File>
+            <File>
+              <FileName>encoder.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\User\encoder.h</FilePath>
+            </File>
+            <File>
+              <FileName>pid.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\User\pid.c</FilePath>
+            </File>
+            <File>
+              <FileName>pid.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\User\pid.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
