--- a/syq/syq/.vscode/settings.json
+++ b/syq/syq/.vscode/settings.json
@@ -59,5 +59,6 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
     "main.h": "c"
-  }
+  },
+  "editor.fontSize": 17
 }
